tests/style/naming_config_error/expected_out.txt
=== PLAIN MODE ===
miss_hit.cfg: error: config file contains errors
In miss_hit.cfg, line 1
| regex_class_name: "foo(bar"
|                       ^ error: missing ), unterminated subpattern
.: error: cannot find project root because the config file contains errors: please add a config file with the 'project_root' directive
MISS_HIT Style Summary: 2 file(s) analysed, 3 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 2 file(s) analysed, 3 error(s)
